--- a/docker_compose/nginx.conf
+++ b/docker_compose/nginx.conf
@@ -22,6 +22,10 @@ http {
             text/css css; 
             }
         }
+        location /media/ {
+           alias /media/;
+           
+        }
         access_log /dev/stdout;
         error_log /dev/stderr;
        
